# flutterFreeze

./: README.md  pubspec.yaml
android/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  settings.gradle
android/libs/: libnative_freeze.dylib
android/src/main/: AndroidManifest.xml
android/src/main/java/com/isaac/flutterfreeze/: FlutterfreezePlugin.java
android/src/test/java/com/isaac/flutterfreeze/: FlutterfreezePluginTest.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/isaac/flutterfreeze_example/: MainActivity.java
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutterfreeze.podspec
ios/Classes/: FlutterfreezePlugin.swift  ui_thread_stacktrace.c
lib/: flutterfreeze.dart  flutterfreeze_method_channel.dart  flutterfreeze_platform_interface.dart  generated_bindings.dart  perf_freeze.dart
test/: flutterfreeze_method_channel_test.dart  flutterfreeze_test.dart
